fix: #WB-2485 Update gap on responsive toolbar (#51)

--- a/packages/bootstrap/scss/components/_toolbar.scss
+++ b/packages/bootstrap/scss/components/_toolbar.scss
@@ -1,9 +1,14 @@
 @use "../abstracts/" as *;
+@use "../vendors/bootstrap";
 
 .toolbar {
   align-items: center;
   gap: $spacer-8;
   border-radius: $spacer-16;
+
+  @include bootstrap.media-breakpoint-down(md) {
+    gap: $spacer-4;
+  }
 
   &.default {
     padding: $spacer-8 $spacer-12;
